--- a/package.json
+++ b/package.json
@@ -1,25 +1,30 @@
 {
   "name": "jobble",
   "private": true,
+  "engines": {
+    "node": "6.0.0",
+    "npm": "3.8.6"
+  },
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
-  },
-  "devDependencies": {
+    "redux": "^3.7.2",
+    "webpack": "^3.5.6",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
+    "babel-preset-react": "^6.24.1"
+  },
+  "devDependencies": {
     "eslint": "^4.6.1",
-    "webpack": "^3.5.6",
     "webpack-dev-server": "^2.7.1"
   },
   "scripts": {
     "build": "webpack",
     "watch": "webpack --progress --colors --watch",
-    "server": "webpack-dev-server --progress --colors"
+    "server": "webpack-dev-server --progress --colors",
+    "postinstall": "webpack"
   },
   "version": "1.0.0",
   "main": "index.js",
