--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "webpack": "^3.5.6"
+    "webpack": "^3.5.6",
+    "css-loader": "^0.28.7",
+    "sass-loader": "^6.0.6",
+    "node-sass": "^4.5.3",
+    "style-loader": "^0.18.2"
   },
   "devDependencies": {
-    "css-loader": "^0.28.7",
     "eslint": "^4.6.1",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
     "webpack-dev-server": "^2.7.1"
   },
   "scripts": {
