--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "npm": "3.8.6"
   },
   "dependencies": {
+    "auth0-js": "^8.9.3",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
