--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   },
   "dependencies": {
     "auth0-js": "^8.9.3",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
     "node-sass": "^4.5.3",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "eslint": "^4.6.1",
+    "flow-bin": "^0.55.0",
     "webpack-dev-server": "^2.7.1"
   },
   "scripts": {
