--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "webpack": "^3.5.6"
   },
   "devDependencies": {
-    "eslint": "^4.6.1",
+    "eslint": "^4.7.2",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.4.0",
     "webpack-dev-server": "^2.7.1"
   },
   "scripts": {
