--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
   },
   "rules": {
     "semi": 0,
-    "jsx-filename-extension": 0
+    "react/jsx-filename-extension": 0,
+    "class-methods-use-this": 0
   }
 }
