--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,8 @@
   },
   "rules": {
     "semi": 0,
+    "class-methods-use-this": 0,
     "react/jsx-filename-extension": 0,
-    "class-methods-use-this": 0
+    "react/prop-types": 0
   }
 }
