--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,12 @@
 {
   "extends": "airbnb",
   "env": {
-    "browser": true,
-    "node": true
+    "browser": true
   },
+  "parser": "babel-eslint",
   "rules": {
     "semi": 0,
+    "jsx-quotes": [2, "prefer-single"],
     "class-methods-use-this": 0,
     "react/jsx-filename-extension": 0,
     "react/prop-types": 0
